test/src/e2e_vm_tests/test_programs/should_fail/storage_clear_incorrect_purity_annotation/src/main.sw
contract;

abi MyContract {
    fn test_function();
}

impl MyContract for Contract {
    fn test_function() {
        std::storage::clear(0x0000000000000000000000000000000000000000000000000000000000000000);
    }
}
